--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-type-animation": "^3.2.0",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
