--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.21.0",
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.9",
+    "imagekitio-react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.1",
     "react-type-animation": "^3.2.0",
     "sass": "^1.83.0",
